--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:mysql://root:xSznRISJKjiNDyEwzMIIxLgUkCYYZxFQ@interch
 spring.datasource.username=root
 spring.datasource.password=xSznRISJKjiNDyEwzMIIxLgUkCYYZxFQ
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
